<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.andreev.lessons_flow.ui.lesson_info.LessonInfoViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/parent_relative"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/back_image"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/class_number_tv"
                style="@style/TextMotserrat.Big.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/back_image"
                android:layout_alignBottom="@id/back_image"
                android:layout_marginHorizontal="10dp"
                android:layout_toEndOf="@id/back_image"
                android:gravity="center_vertical"
                android:text='@{viewModel.lesson.lesson_number_start + " пара"}'
                tools:text="123123" />

            <TextView
                android:text='@{viewModel.lesson.type}'
                android:id="@+id/type_tv"
                style="@style/TextProximaRegular.Normal.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/class_number_tv"
                android:layout_marginTop="10dp"
                tools:text="Lecture Online" />

            <TextView
                android:text='@{viewModel.lesson.discipline}'
                android:id="@+id/discipline"
                style="@style/TextMotserrat.Big.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/type_tv"
                android:layout_marginVertical="10dp"
                tools:text="Project Seminar" />

            <ImageView
                android:id="@+id/clock_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/discipline"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/clock_image"
                android:src="@drawable/ic_baseline_access_time_24" />

            <TextView
                android:id="@+id/time_tv"
                style="@style/TextProximaRegular.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/clock_image"
                android:layout_alignBottom="@id/clock_image"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/clock_image"
                android:gravity="center_vertical"
                android:lines="1"
                android:text='@{viewModel.time}'
                tools:text="saturday, saturday, saturday, saturday, saturday, saturday " />

            <ImageView
                android:id="@+id/location_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/clock_image"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/location_image"
                android:src="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/location_tv"
                style="@style/TextProximaRegular.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/location_image"
                android:layout_alignBottom="@id/location_image"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/location_image"
                android:gravity="center_vertical"
                android:lines="1"
                android:text='@{viewModel.lesson.building}'
                tools:text="saturday, saturday, saturday, saturday, saturday, saturday " />

            <TextView
                android:id="@+id/professor_tv"
                style="@style/TextMotserrat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location_image"
                android:layout_marginVertical="10dp"
                android:text="@string/professor" />

            <View
                android:id="@+id/professor_view"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_below="@id/professor_tv"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circle" />

            <TextView
                android:id="@+id/professor_name_tv"
                style="@style/TextMotserrat.Big.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/professor_view"
                android:layout_alignTop="@id/professor_view"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/professor_view"
                android:gravity="center_vertical"
                android:lines="1"
                android:text='@{viewModel.lesson.lecturer}'
                tools:text="Andreev" />

            <TextView
                style="@style/TextMotserrat"
                android:id="@+id/course_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/professor_view"
                android:layout_marginVertical="10dp"
                android:text="@string/course" />

            <ImageView
                android:id="@+id/link_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/course_tv"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/link_image"
                android:src="@drawable/ic_baseline_link_24" />

            <TextView
                android:id="@+id/link_tv"
                style="@style/TextProximaRegular.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/link_image"
                android:layout_alignBottom="@id/link_image"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/link_image"
                android:gravity="center_vertical"
                android:lines="1"
                android:text="@string/link_to_discipline"
                tools:text="saturday, saturday, saturday, saturday, saturday, saturday " />

            <TextView
                style="@style/TextMotserrat"
                android:id="@+id/info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/link_tv"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/info" />

            <TextView
                android:text='@{viewModel.lesson.stream}'
                style="@style/TextProximaRegular.Small"
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/info_tv"
                tools:text="123153252345124325" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>